--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
             <h2>👋 👋 👋 👋 👋 Team Members (Your Task is Here!)👋 👋 👋 👋 👋 </h2>
             <p><strong>Your Goal:</strong> Add your name to this list using the Fork & Pull Request workflow described in the instructions below.</p>
             <ul>
-                <li>Superman (Example)</li>
-                <li>Batman (Example)</li>
-                <li>Spiderman(Example)</li>
-                <li>Superwoman (Example)</li>
-                <li>Chairman (Example)</li>
+                <li>DeAngelo Johnson</li>
+                <li>Manuel Ayvar</li>
+                <li>Massimo Cuellar</li>
+                <li>Salman Duraia</li>
+                
 
             </ul>
         </section>
